Fix padding around links on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ input[type="submit"] {
 
   nav a {
     display: block;
-    padding 10px;
+    padding: 10px;
   }
 
   nav a:hover {
